# lingcode

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
bindings/node/: package.json
bindings/python/: setup.py
crates/converters/: Cargo.toml
crates/converters/src/: lib.rs  s2t_t2s.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/dict/: Cargo.toml
crates/dict/src/: lib.rs
crates/double-pinyin/: Cargo.toml
crates/double-pinyin/src/: lib.rs
crates/double-pinyin/src/schemas/: common.rs
crates/engine/: Cargo.toml
crates/engine/src/: candidate.rs  input_state.rs  lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: c_api.rs
crates/pinyin/: Cargo.toml
crates/pinyin/src/: lib.rs  simplified.rs  traditional.rs
docs/: api.md  design.md  platform_notes.md
examples/cli-demo/src/: main.rs
frontends/desktop/linux/: Cargo.toml
frontends/desktop/macos/: Cargo.toml
frontends/desktop/windows/: Cargo.toml
frontends/mobile/android/: Cargo.toml
frontends/mobile/ios/: Cargo.toml
tests/fixtures/: sample_dict.yaml
tests/integration/: engine_integration.rs
tools/scripts/: prepare_release.sh
workflows/: ci.yml
