[package]
name = "lingcode-rime-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
lingcode-rime-core = { path = "../../crates/core" }
lingcode-rime-engine = { path = "../../crates/engine" }
lingcode-rime-pinyin = { path = "../../crates/pinyin" }
lingcode-rime-double-pinyin = { path = "../../crates/double-pinyin" }
lingcode-rime-dict = { path = "../../crates/dict" }
lingcode-rime-converters = { path = "../../crates/converters" }
lingcode-rime-ffi = { path = "../../crates/ffi" }